--- a/packages/my-personal-mp/package.json
+++ b/packages/my-personal-mp/package.json
@@ -53,5 +53,13 @@
     "vue": "^3.2.39",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.0.2"
+  },
+  "devDependencies": {
+    "@dcloudio/types": "^3.0.14",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3060420220922001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060420220922001",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3060420220922001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060420220922001",
+    "vite": "^2.9.14"
   }
 }
