--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "typescript": "^4.8.3",
     "vue-class-component": "8.0.0-rc.1",
     "vue-property-decorator": "10.0.0-rc.3"
+  },
+  "devDependencies": {
+    "class-validator": "^0.13.2"
   }
 }
