add: activity-user-mp dev-env

--- a/packages/my-personal-mp/.env.development
+++ b/packages/my-personal-mp/.env.development
@@ -1,1 +1,16 @@
-VITE_APP_BASE_URL=http://localhost:8080
+VITE_APP_API_TIMEOUT=30000
+VITE_APP_PROJECT_NAME=activity-user-mp
+VITE_APP_WECHAT_APPID=wxbcad7d1f97105fec
+VITE_APP_USER_CENTER_BASE_API=https://newton-dev-samwell.ai121.net/ucenter
+VITE_APP_ACTIVITY_BASE_API=https://newton-dev-samwell.ai121.net:2443/activity-user-server
+VITE_APP_BLOB_IMAGE_URL=https://newtondevsa.blob.core.chinacloudapi.cn/testcontainer
+VITE_APP_REPORT_WEB_URL=https://ai-gc-report-dev.chinacloudsites.cn
+VITE_APP_CERT_WEB_URL=https://ai-competition.ai121.net
+VITE_APP_SHOP_MINI_APP_APPID=wxf8ba293c88f54597
+VITE_APP_SEVER_APPID=20210001
+VITE_APP_CARMELA_APP_URL=https://webapp-dev.ai121.net
+VITE_APP_SEVER_SECRET=2e07d91eea180cd89d1d9bb052dc4773
+VITE_APP_VERSION=2.4.6
+VITE_APP_THEME_TYPE=normal
+VITE_APP_CHANNEL_CODE=dev
+VITE_APP_LEARNING_BASE_API=https://dev.ai121.net
