--- a/packages/my-personal-mp/package.json
+++ b/packages/my-personal-mp/package.json
@@ -50,6 +50,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060420220922001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060420220922001",
     "@dcloudio/uni-ui": "^1.4.22",
+    "@lasted/mapper-shared": "workspace:^1.0.0",
     "@lasted/shared": "workspace:^1.0.0",
     "@lasted/uni-shared": "workspace:^1.0.0",
     "vue": "^3.2.39",
